frontend/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: visionapply-frontend
  labels:
    app: visionapply-frontend
spec:
  selector:
    env: prod
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
